--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <h1>Solicite Dados ao Usuário</h1>
-    <script src="main.js"></script>    
+        
+    <h3>Dentro desse documento esta incluido o primeiro projeto main.</h3>
+    <div>
+        <a href="./Function/function.html">Aqui é o documento para a primeira tarefa.</a>
+    </div>
+    <div>
+        <a href="./Loop/loop.html"><p>Aqui esta a atividade de Loop usando o elemento for</p></a>
+    </div>
+
+    <script src="main.js"></script>
     </body>
 </html>
