--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <div>
         <a href="./Loop/loop.html"><p>Aqui esta a atividade de Loop usando o elemento for</p></a>
     </div>
-
+    <div>
+        <a href="./Stations/stations.html"><p>Aqui esta a atividade de.</p></a>
+    </div>
+    <div>
+        <a href="./Workshop1/workshop.html"><p>Aqui esta a atividade de.</p></a>
+    </div>
     <script src="main.js"></script>
     </body>
 </html>
