--- a/Function/function.html
+++ b/Function/function.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Solicite Dados ao Usuário</h1>
-    <script src="function.js"></script>    
+    <div>
+        <a href="../index.html"><p>Aqui pode vvoltar para o Inicio.</p></a>
+    </div>
+    <script src="function.js"></script>
     </body>
 </html>
