--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <a href="./Loop/loop.html"><p>Aqui esta a atividade de Loop usando o elemento for</p></a>
     </div>
     <div>
-        <a href="./Stations/stations.html"><p>Aqui esta a atividade de.</p></a>
+        <a href="./Stations/stations.html"><p>Aqui esta a atividade das estações.</p></a>
     </div>
     <div>
-        <a href="./Workshop1/workshop.html"><p>Aqui esta a atividade de.</p></a>
+        <a href="./Workshop1/workshop.html"><p>Aqui esta a atividade de números pares ou impares.</p></a>
     </div>
     <script src="main.js"></script>
     </body>
