--- a/Function/function.html
+++ b/Function/function.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Solicite Dados ao Usuário</h1>
     <div>
-        <a href="../index.html"><p>Aqui pode vvoltar para o Inicio.</p></a>
+        <a href="../index.html"><p>Aqui pode voltar para o Inicio.</p></a>
     </div>
     <script src="function.js"></script>
     </body>
