--- a/Loop/loop.html
+++ b/Loop/loop.html
@@ -10,8 +10,14 @@
 <body>
     <h1>Atividade de Loop</h1>
     <div></div>
-        <p>Na parte superior vai sair uma Pop Up onde pode inserir um número, a partir de ali, na consola, aprimindo a tecla F12 e seleccionando a opção e consola vai poder visualizar o resultado da tabua do número inserido.</p>
-        <div id="resultado"></div>
+        <p>Na parte superior vai sair uma Pop Up onde pode inserir um número, a partir de ali, na consola, aprimindo a tecla F12 e seleccionando a opção de consola vai poder visualizar o resultado da tabua do número inserido.</p>
+        <br>
+        <h2>No "alert" vai solicitar um digito, aqui embaixo vai ser mostrando os resultados de multipla.</h2>
+            <div id="resultado"></div><br><br>
+        <h3>Outro exemplo de Loop</h3>
+            <p>Neste outro exemplo, podemos saber uma divida, com o valor de parcelas necessarias a pagar e também o valor de divida restante após cada pagamento.</p>
+        <button id="calcularBtn">Calcular Divida</button>
+        <div id="valor"></div>
         <div>
             <a href="../index.html"><p>Aqui pode voltar no inicio.</p></a>
         </div>
