--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Projeto de Javascript">
+    <link rel="stylesheet" href="main.css">
+    <style>
+        @import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap);
+    </style> 
     <title>Pratica Javascript</title> 
 </head>
 <body>
