Commit ordem no array

--- a/Objetos/objetos.html
+++ b/Objetos/objetos.html
@@ -12,6 +12,6 @@
         <div>
             <a href="../index.html"><p>Aqui pode voltar no inicio.</p></a>
         </div>
-        <script src="objetos.html"></script>
+        <script src="objetos.js"></script>
     </body>
 </html>
