--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
         
     <h3>Dentro desse documento esta incluido o primeiro projeto main.</h3>
     <div>
+        <a href="./Array/array.html"><p>Aqui esta a atividade de Array.</p></a>
+    </div>
+    <div>
         <a href="./Function/function.html">Aqui é o documento para a primeira tarefa.</a>
     </div>
     <div>
         <a href="./Loop/loop.html"><p>Aqui esta a atividade de Loop usando o elemento for</p></a>
+    </div>
+    <div>
+        <a href="./Main/main.html"><p>Aqui esta o Main.</p></a>
+    </div>
+    <div>
+        <a href="./Objetos/objetos.html"><p>Aqui esta a atividade de Objetos.</p></a>
     </div>
     <div>
         <a href="./Stations/stations.html"><p>Aqui esta a atividade das estações.</p></a>
